# Zomato-Delivery-Time-Prediction-System

./: .gitignore  README.md  app.py  download_models.py  extract_nb.py  predict.py  pyproject.toml  requirements.txt  retrain_model.py
models/: power_transformer.joblib  preprocessor.joblib
notebooks/: finalEstimator.py
static/js/: main.js
templates/: index.html
