[project]
name = "zomato-delivery-time-prediction"
version = "0.1.0"
description = "Zomato delivery time prediction using LightGBM"
requires-python = ">=3.11.15"
dependencies = [
    "flask>=3.1.3",
    "python-dotenv>=1.2.1",
    "pandas",
    "numpy",
    "lightgbm",
    "scikit-learn",
    "gunicorn",
    "gdown>=5.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
